--- a/stories/components/message/Popover.stories.mdx
+++ b/stories/components/message/Popover.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import Popover, { placements } from '@/components/components/message/Popover';
+import Popover from '@/components/components/message/Popover';
+import { placements } from '@/utils/constants/tooltip';
 import Typography from '@/components/elements/core/typography/Typography';
 import Icon from '@/components/elements/core/icon/Icon';
 import Button from '@/components/components/general/button/Button';
@@ -74,6 +75,56 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <NewGrid>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="height: 120px; margin-top: 50px">
+                            <Popover placement="top-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top-right</div>
+                                </template>
+                            </Popover>
+                            <Popover placement="top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top</div>
+                                </template>
+                            </Popover>
+                            <Popover placement="top-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top-left</div>
+                                </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="margin-top: 30px; margin-bottom: 70px">
+                            <Popover placement="top-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <Typography type="body2">Title</Typography>
+                                    <Typography type="caption1" color="gray800">content</Typography>
+                                    <Button>button</Button>
+                                </template>
+                            </Popover>
+                            <Popover placement="top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <Typography type="body2">Title</Typography>
+                                    <Typography type="caption1" color="gray800">content</Typography>
+                                    <Button>button</Button>
+                                </template>
+                            </Popover>
+                            <Popover placement="top-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <Typography type="body2">Title</Typography>
+                                    <Typography type="caption1" color="gray800">content</Typography>
+                                    <Button>button</Button>
+                                </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
                     <NewRow>
                         <NewCol class="flex flex-row justify-around" style="height: 120px">
                             <Popover placement="bottom-right" :open="true">
@@ -187,6 +238,28 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <NewGrid>
+                    <NewRow>
+                        <NewCol class="flex flex-row justify-around" style="margin-top: 50px; margin-bottom: 30px">
+                            <Popover placement="top-right" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top-right</div>
+                                </template>
+                            </Popover>
+                            <Popover placement="top" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top</div>
+                                </template>
+                            </Popover>
+                            <Popover placement="top-left" :open="true">
+                                <Icon name="IconProfileLargeFill"></Icon>
+                                <template v-slot:popover>
+                                    <div>top-left</div>
+                                </template>
+                            </Popover>
+                        </NewCol>
+                    </NewRow>
                     <NewRow>
                         <NewCol class="flex flex-row justify-around" style="height: 60px">
                             <Popover placement="bottom-right" :open="true">
